[project]
name = "ipcc-web-test"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "basemap>=1.4.1",
    "geopandas>=1.0.1",
    "h5netcdf>=1.4.0",
    "matplotlib>=3.8.4",
    "netcdf4>=1.7.2",
    "numpy>=1.26.4",
    "pandas>=2.2.3",
    "rioxarray>=0.17.0",
    "streamlit>=1.39.0",
    "xarray>=2024.10.0",
]

[tool.uv]
dev-dependencies = [
    "ipykernel>=6.29.5",
]
